z-index fix

--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,6 @@
   padding: 0;
   background-color: var(--ui-light-shade-color);
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .3);
-  z-index: 1;
   padding-bottom: 0;
 
   &__price-count {
@@ -69,7 +68,6 @@
         height: 100%;
         background-color: var(--ui-dark-shade-color);
         opacity: 0.05;
-        z-index: -1;
       }
     }
   }
@@ -109,7 +107,6 @@
 }
 
 .plan--main {
-  z-index: 2;
   margin-top: 0;
   margin-bottom: 0;
   padding-bottom: 0;
